--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
+    "axios": "^0.18.0",
+    "vue": "^2.5.21",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
